# Project-Documentation-Tools

./: README.md
Docusaurus/: README.md  package-lock.json  package.json
Docusaurus/my-website/: .env  (+6 more)
MKDOCS/Documentation-tutorial/: README.md  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tools.js  typedoc.json
MKDOCS/Documentation-tutorial/docs/: Flowchart.md  Footnotes.md  Grid.md  Type.md  about.md  code.md  index.md  openapi.md
MKDOCS/Documentation-tutorial/docs/api/: README.md
MKDOCS/Documentation-tutorial/docs/api/classes/: TaskManager.md
MKDOCS/Documentation-tutorial/docs/api/interfaces/: Task.md
MKDOCS/Documentation-tutorial/docs/stylesheet/: extra.css
MKDOCS/Documentation-tutorial/overrides/: main.html
MKDOCS/Documentation-tutorial/site/: 404.html  api.html  index.html  objects.inv  sitemap.xml
MKDOCS/Documentation-tutorial/site/Flowchart/: index.html
MKDOCS/Documentation-tutorial/site/Footnotes/: index.html
MKDOCS/Documentation-tutorial/site/Grid/: index.html
MKDOCS/Documentation-tutorial/site/Type/: index.html
MKDOCS/Documentation-tutorial/site/about/: index.html
MKDOCS/Documentation-tutorial/site/api/: index.html
MKDOCS/Documentation-tutorial/site/api/classes/TaskManager/: index.html
MKDOCS/Documentation-tutorial/site/api/interfaces/Task/: index.html
MKDOCS/Documentation-tutorial/site/code/: index.html
MKDOCS/Documentation-tutorial/site/schema/openapi/: index.html
MKDOCS/Documentation-tutorial/site/search/: search_index.json
MKDOCS/Documentation-tutorial/src/: index.ts  task.ts  taskManager.ts
(+26 files in other folders)
